wrap text within event modal to stop overflow

--- a/dashboard/src/components/EventModal.scss
+++ b/dashboard/src/components/EventModal.scss
@@ -1,3 +1,3 @@
-p {
-    margin: 0.25em;
+.modal-body {
+    word-wrap: break-word;
 }
